<resources>
    <string name="app_name">AS2Aide</string>
    <string name="mal_title_about">About</string>
    <string-array name="activity_name">
        <item>EmptyActivity</item>
        <item>BasicActivity</item>
        <item>NavigationDrawerActivity</item>
        <item>TabbedActivity</item>
        <item>FullscreenActivity</item>
        <item>LoginActivity</item>
        <item>ScrollActivity</item>
        <item>SettingsActivity</item>
    </string-array>
    <string-array name="descriptions">
        <item>Creates a new empty activity.</item>
        <item>Creates a new basic activity with an app bar.</item>
        <item>Creates a new Activity with a Navigation Drawer.</item>
        <item>Creates a new blank activity,with an action bar and navigational elements such as tabs or horizontal swipe.</item>
        <item>Creates a new activity that toggles the visibility of the system UI and action bar upon user interaction.</item>
        <item>Creates a new login activity,allowing users to optionally sign in with Google+ or enter an email address and password to log in to or register with your application.</item>
        <item>Creates a new vertical scrolling activity.</item>
        <item>Creates a new application settings activity that presents alternative layouts on handset and tablet-size screens.</item>
    </string-array>
    <string name="step_2">Add an Activity to Mobile</string>
    <string name="step_3">Customize the Activity</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="crash">Crash</string>
    <string name="quit">Esc</string>
    <string name="set">Set</string>
    <string name="data">Package name : %3$s.%2$s.%1$s.%4$s</string>
	<string name="git_ignore">
		/build\n
	</string>
	<string name="build">
        "buildscript {\n"
		"   repositories {\n"
        "      jcenter()\n"
		"   }\n"
		"   dependencies {\n"
        "       classpath \'com.android.tools.build:gradle:1.+\'\n"
		"   }"\n
        "}\n"
		"allprojects {\n"
		"   repositories {\n"
        "       jcenter()\n"
		"}\n"
        "}"
	</string>
	<string name="app_build">apply plugin:\'com.android.application\'\n android {\n compileSdkVersion 24\n buildToolsVersion \"24.0.2\"\n defaultConfig {\n applicationId \"%1$s\"\n minSdkVersion 16\n targetSdkVersion 24\n versionCode 1\n versionName \"1.0\"\n testInstrumentationRunner \"android.support.test.runner.AndroidJUnitRunner\"\n}\n buildTypes {\n release {\n minifyEnabled false\n proguardFiles getDefaultProguardFile(\'proguard\-android.txt\'), \'proguard\-rules.pro\'\n}\n}\n}\n dependencies {\n compile\'com.android.support:appcompat-v7:+\'\n compile \'com.android.support:design:+\'\n}\n
	</string>
    <string name="action_settings">Settings</string>
    <string name="application_name">Application Name :</string>
    <string name="changelog">ChangeLog</string>
    <string name="change_info">"*Fix the templet of SettingsActivity\n*Add Activities to "About"\n*Del "Material-Design-Library"\n*Modify the AppTheme\n*More to be continued,Thx~"</string>
    <string name="contact_author">Contact Author?</string>
    <string name="go_to_look">Have a look?</string>
    <string name="license">Copyright © 2017 春和景明 \n Licensed under the Apache License,\n Version 2.0 (the \"License\"); \n you may not use this file except in compliance with the License.\n You may obtain a copy of the License at\nhttp://www.apache.org/licenses/LICENSE-2.0 \n Unless required by applicable law or agreed to in writing, software \n distributed under the License is distributed on an \"AS IS\" BASIS,\n WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n See the License for the specific language governing permissions and\n limitations under the License.</string>
    <string name="path">Path:</string>
    <string name="from">From:…</string>
    <string name="activity_name">Activity Name:</string>
    <string name="layout_name">Layout Name:</string>
    <string name="next">Next</string>
    <string name="package_name">Package name :</string>
    <string name="company_domain">Company Domain:</string>
    <string name="clear">Clear</string>
    <string name="generator">Build</string>
    <string name="more_info">More Info</string>
    <string name="ok">OK</string>
    <string name="license_name">License</string>
    <string name="version">Version</string>
    <string name="change_log">ChangeLog</string>
    <string name="error_info">Error Info</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="version_info">已经是最新版本</string>
    <string name="error_not_null">Not Null</string>
    <string name="error_bad_format">Bad Format</string>
    <string name="wait">Wait a moment();</string>
    <string name="wait_info">{The \"templet_AS2Aide\" is copying...}</string>
    <string name="error_exist">Project already exists!</string>
    <string name="error_null_aide">You don\'t install Aide at all</string>
    <string name="main">main</string>
    <string name="Main">Main</string>
    <string name="myapp_mycompany_com">myapp.mycompany.com</string>
    <string name="myapplication">Myapplication</string>
</resources>
