<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/set"
        app:showAsAction="never">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/menu_about"
                android:title="@string/about" />
            <item
                android:id="@+id/menu_crash"
                android:title="@string/crash" />
            <item
                android:id="@+id/menu_update"
                android:title="@string/help" />
            <item
                android:id="@+id/menu_esc"
                android:title="@string/quit" />
        </group>
    </menu>
    </item>
</menu>
