<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="false"
    app:cardCornerRadius="8dp">
<LinearLayout
    android:layout_margin="8dp"
    android:padding="8dp"
    android:id="@+id/mRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/completeImageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="8dp"

        android:contentDescription="@string/activity_name"
        android:src="@drawable/basic_activity" />

    <TextView
        android:layout_margin="8dp"
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:padding="8dp"
        android:layout_margin="8dp"
        android:id="@+id/filepathButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_file_download_black_24dp"
        android:gravity="start|center"
        android:text="@string/from" />

    <EditText
        android:padding="8dp"
        android:id="@+id/activity_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:hint="@string/activity_name"
        android:text="@string/Main" />


    <EditText
        android:padding="8dp"
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape"
        android:digits="_abcdefghijklmnopqrstuvwxyz"
        android:hint="@string/layout_name"
        android:text="@string/main" />

    <Button
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:background="@drawable/shape_button"
        android:id="@+id/completeButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/generator" />
</LinearLayout>
</android.support.v7.widget.CardView>