<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/package_FullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/package_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/cLinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/package_FullName"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_application_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_application_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz123456789"
                    android:hint="@string/application_name"
                    android:maxLines="1"
                    android:text="@string/myapplication" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=".abcdefghijklmnopqrstuvwxyz"
                    android:hint="@string/company_domain"
                    android:maxLines="1"
                    android:text="@string/myapp_mycompany_com" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cLinearLayout1"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/clear"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:text="@string/clear" />

            <Button
                android:id="@+id/next"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:text="@string/next" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
