<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn1"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/about" />
    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/btn1"
        android:id="@+id/btn2"
        android:text="@string/crash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_margin="4dp"
        android:layout_below="@id/btn1"
        android:id="@+id/btn3"
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_margin="4dp"
        android:layout_below="@id/btn1"
        android:layout_toEndOf="@id/btn3"
        android:id="@+id/btn4"
        android:text="@string/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
